--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<title>Weibo login</title>
 </head>
 <body>
-	<h3><a href="{{ oauth_url }}">微博登录</a></h3>
+	<h3><a href="{{ oauth_url }}"><img src="/static/loginButton_24.png" alt=""></a></h3>
 </body>
 </html>
